@@ -269,6 +269,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\FileArea.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\Friend.cpp"
 				>
 			</File>
